[tool.poetry]
name = "repl_nix_entitypengan"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.86.0"
xds-protos = "^0.0.11"
discord = "^2.2.3"
Flask = "^2.3.2"
replit = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
